--- a/GeminiAPIユーズ.ipynb
+++ b/GeminiAPIユーズ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "be1e0aa4-7f1a-4da0-a44d-80dd48642dc9",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f04e03fa-e465-4c7b-9c70-fecfa6807b02",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed upload: https://generativelanguage.googleapis.com/v1beta/files/pho4kl8ehy6g\n"
+      "Completed upload: https://generativelanguage.googleapis.com/v1beta/files/az5hdil4ba8k\n"
      ]
     }
    ],
@@ -72,6 +72,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0cd54d50-0208-4952-bb70-9c252ce3f173",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<google.generativeai.types.file_types.File at 0x2ce4a6c6c90>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video_file = genai.get_file(video_file.name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "aabe2740-663b-4afe-b4ac-64c7b080e3d2",
    "metadata": {},
@@ -89,17 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "この動画は、OpenAI DevDayの基調講演の要約です。\n",
+      "動画は、OpenAI DevDay の基調講演の要約で、OpenAI の CEO である Sam Altman 氏が新しい AI モデルと機能を発表している様子を映しています。\n",
       "\n",
-      "OpenAIのCEOであるサム・アルトマンが、新しい言語モデル「GPT-4 Turbo」を発表しています。このモデルは、従来のGPT-4と比べて、コンテキストの長さが12万8000トークンまで対応可能で、JSONモード、関数呼び出しなど、多くの新機能が搭載されています。また、知識ベースも2023年4月まで更新されており、より最新の情報を取得することができます。\n",
+      "**発表された主な内容は以下のとおりです。**\n",
       "\n",
-      "さらに、APIに新しいプログラム「カスタムモデル」が導入されました。これにより、OpenAIの研究者と企業が協力して、企業のニーズに合わせたカスタムモデルを構築することができます。また、既存のGPT-4顧客のレート制限が2倍になり、APIアカウント設定でレート制限とクォータの変更を直接リクエストできるようになりました。\n",
+      "* **GPT-4 Turbo:** 従来の GPT-4 よりも高速かつ低価格で、最大 128,000 トークンのコンテキストを処理可能。\n",
+      "    * JSON モード: 有効な JSON 形式で応答を返す機能。\n",
+      "    * 関数呼び出し: 複数の関数を一度に呼び出すことができる機能。\n",
+      "    * 知識の向上: 2023 年 4 月までの最新の情報を含む。\n",
+      "* **DALL-E 3:** 画像生成 AI モデル。\n",
+      "* **GPT-4 Turbo with Vision:** 画像を理解する能力を備えた GPT-4 Turbo。\n",
+      "* **新しいテキスト音声合成 (TTS) モデル:** より自然な音声合成が可能。\n",
+      "* **カスタムモデル:** 企業のニーズに合わせてカスタマイズされた AI モデルを作成できるプログラム。\n",
+      "* **レート制限の緩和:** 既存の GPT-4 ユーザー向けのトークン数／分の制限が 2 倍に増加。\n",
+      "* **GPTs:** 特定の目的に合わせてカスタマイズされたチャット GPT のバージョン。\n",
+      "    * 自然言語での構築: コーディングの知識がなくても作成可能。\n",
+      "    * プライベート GPT: 個人用 GPT の作成。\n",
+      "    * パブリック GPT: リンクを共有して誰でも使えるようにする。\n",
+      "    * エンタープライズ GPT: 企業内で共有するための GPT の作成。\n",
+      "    * GPT ストア: 他のユーザーが作成した GPT を公開・共有できるプラットフォーム（近日公開予定）。\n",
+      "* **アシスタンス API:** 開発者が AI アシスタントを簡単に構築するための API。\n",
+      "    * スレッディング: 長い会話履歴を効率的に管理。\n",
+      "    * リトリーバル: 外部データを利用して回答の精度を向上。\n",
+      "    * コードインタープリター: Python コードの実行環境。\n",
+      "    * 関数呼び出しの改善: より複雑なタスクの自動化。\n",
       "\n",
-      "さらに、OpenAIは「GPT」と呼ばれる、ChatGPTの特定の目的に合わせたカスタマイズバージョンを導入しました。GPTは、指示、拡張された知識、アクションを組み合わせることで、よりユーザーにとって役立つものになります。コーディングの知識がない人でも、自然言語でGPTをプログラムできるように設計されています。プライベートGPTを作成したり、作成したGPTを誰でも使用できるように公開したり、ChatGPT Enterpriseを使用している場合は、会社専用のGPTを作成したりすることができます。OpenAIはまた、今月末にGPTストアを立ち上げる予定です。\n",
-      "\n",
-      "APIには、アシスタンスAPIが導入され、永続的なスレッド、組み込みの検索、コードインタープリター、サンドボックス環境での動作するPythonインタープリター、そしてもちろん、改善された関数呼び出しが含まれています。\n",
-      "\n",
-      "アルトマンは、インテリジェンスがあらゆる場所に統合されるにつれて、私たちは皆、オンデマンドでスーパーパワーを持つようになると述べています。彼は、この技術を使って私たちが何を作り出すかを見ることに興奮しており、私たち全員が一緒に構築していく新しい未来を発見することを楽しみにしています。\n"
+      "Altman 氏は、AI があらゆる場所に統合され、すべての人がオンデマンドで超能力を使えるようになると述べ、これらの新しい技術が未来を築くために役立つことを期待していると語りました。\n"
      ]
     }
    ],
