--- a/GeminiAPIユーズ.ipynb
+++ b/GeminiAPIユーズ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "be1e0aa4-7f1a-4da0-a44d-80dd48642dc9",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "f04e03fa-e465-4c7b-9c70-fecfa6807b02",
    "metadata": {},
    "outputs": [
@@ -33,13 +33,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed upload: https://generativelanguage.googleapis.com/v1beta/files/az5hdil4ba8k\n"
+      "Completed upload: https://generativelanguage.googleapis.com/v1beta/files/dpmdm75xq3m\n"
      ]
     }
    ],
    "source": [
     "# 動画のアップロード\n",
-    "video_file = genai.upload_file(path=\"keynote_recap.mp4\")\n",
+    "video_file = genai.upload_file(path=\"temp001.mp4\")\n",
     "print(\"Completed upload:\", video_file.uri)"
    ]
   },
@@ -73,21 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "0cd54d50-0208-4952-bb70-9c252ce3f173",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<google.generativeai.types.file_types.File at 0x2ce4a6c6c90>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "video_file = genai.get_file(video_file.name)"
    ]
@@ -102,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "4e49f205-0db3-4c20-9dad-aebc0cd37586",
    "metadata": {},
    "outputs": [
@@ -110,32 +99,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "動画は、OpenAI DevDay の基調講演の要約で、OpenAI の CEO である Sam Altman 氏が新しい AI モデルと機能を発表している様子を映しています。\n",
+      "動画は、ウェストポイントの米国陸軍士官学校に新入生が入学する様子を映し出しています。\n",
       "\n",
-      "**発表された主な内容は以下のとおりです。**\n",
-      "\n",
-      "* **GPT-4 Turbo:** 従来の GPT-4 よりも高速かつ低価格で、最大 128,000 トークンのコンテキストを処理可能。\n",
-      "    * JSON モード: 有効な JSON 形式で応答を返す機能。\n",
-      "    * 関数呼び出し: 複数の関数を一度に呼び出すことができる機能。\n",
-      "    * 知識の向上: 2023 年 4 月までの最新の情報を含む。\n",
-      "* **DALL-E 3:** 画像生成 AI モデル。\n",
-      "* **GPT-4 Turbo with Vision:** 画像を理解する能力を備えた GPT-4 Turbo。\n",
-      "* **新しいテキスト音声合成 (TTS) モデル:** より自然な音声合成が可能。\n",
-      "* **カスタムモデル:** 企業のニーズに合わせてカスタマイズされた AI モデルを作成できるプログラム。\n",
-      "* **レート制限の緩和:** 既存の GPT-4 ユーザー向けのトークン数／分の制限が 2 倍に増加。\n",
-      "* **GPTs:** 特定の目的に合わせてカスタマイズされたチャット GPT のバージョン。\n",
-      "    * 自然言語での構築: コーディングの知識がなくても作成可能。\n",
-      "    * プライベート GPT: 個人用 GPT の作成。\n",
-      "    * パブリック GPT: リンクを共有して誰でも使えるようにする。\n",
-      "    * エンタープライズ GPT: 企業内で共有するための GPT の作成。\n",
-      "    * GPT ストア: 他のユーザーが作成した GPT を公開・共有できるプラットフォーム（近日公開予定）。\n",
-      "* **アシスタンス API:** 開発者が AI アシスタントを簡単に構築するための API。\n",
-      "    * スレッディング: 長い会話履歴を効率的に管理。\n",
-      "    * リトリーバル: 外部データを利用して回答の精度を向上。\n",
-      "    * コードインタープリター: Python コードの実行環境。\n",
-      "    * 関数呼び出しの改善: より複雑なタスクの自動化。\n",
-      "\n",
-      "Altman 氏は、AI があらゆる場所に統合され、すべての人がオンデマンドで超能力を使えるようになると述べ、これらの新しい技術が未来を築くために役立つことを期待していると語りました。\n"
+      "動画は、新入生が頭を丸坊主に刈られているシーンから始まります。彼らは緊張した面持ちで、これから始まる厳しい訓練に備えています。\n",
+      "その後、新入生たちは家族との最後の別れを惜しみます。彼らは6週間、家族との連絡が極端に制限されるため、涙を流す人もいます。\n",
+      "新入生たちは軍服に着替え、上官からの指示を受けながら、基本的な軍事訓練を受け始めます。行進や命令への従順など、軍人としての基礎を学びます。\n",
+      "厳しい訓練を経て、新入生たちは宣誓式に臨みます。彼らは米国陸軍の一員として、国に奉仕することを誓います。\n",
+      "動画の最後は、新入生たちが堂々と行進するシーンで締めくくられます。彼らは厳しい訓練を経て、軍人としての第一歩を踏み出します。\n"
      ]
     }
    ],
@@ -155,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "777bbce5-dc07-453f-8c3c-e151ba6876ec",
    "metadata": {},
    "outputs": [],
@@ -167,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97b42059-996a-4468-8a00-7509aca719e9",
+   "id": "4fbfcaef-998b-496e-878d-12348dfc6028",
    "metadata": {},
    "outputs": [],
    "source": []
