--- a/Youtube動画Download.ipynb
+++ b/Youtube動画Download.ipynb
@@ -142,6 +142,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0620c90f-77de-4477-b66d-56c1f2298e3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "YoutubeのURL: https://www.youtube.com/watch?v=F8_ME4VwTiw\n",
+      "保存ファイル名(.mp4): temp002.mp4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[youtube] Extracting URL: https://www.youtube.com/watch?v=F8_ME4VwTiw\n",
+      "[youtube] F8_ME4VwTiw: Downloading webpage\n",
+      "[youtube] F8_ME4VwTiw: Downloading ios player API JSON\n",
+      "[youtube] F8_ME4VwTiw: Downloading m3u8 information\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: ffmpeg not found. The downloaded format may not be the best available. Installing ffmpeg is strongly recommended: https://github.com/yt-dlp/yt-dlp#dependencies\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[info] F8_ME4VwTiw: Downloading 1 format(s): 22\n",
+      "[download] Destination: temp002.mp4\n",
+      "[download] 100% of    8.91MiB in 00:00:01 at 6.77MiB/s   \n"
+     ]
+    }
+   ],
+   "source": [
+    "#ファイル名を指定して保存\n",
+    "import yt_dlp\n",
+    "\n",
+    "# 動画URLと保存したいファイル名を指定\n",
+    "url = input(\"YoutubeのURL:\")  # ダウンロードしたい動画のURL\n",
+    "output_filename = input(\"保存ファイル名(.mp4):\")  # 保存したいファイル名\n",
+    "\n",
+    "# yt-dlpのオプションを設定\n",
+    "ydl_opts = {\n",
+    "    'outtmpl': output_filename  # 出力ファイル名を指定\n",
+    "}\n",
+    "\n",
+    "# yt-dlpを使用して動画をダウンロード\n",
+    "with yt_dlp.YoutubeDL(ydl_opts) as ydl:\n",
+    "    ydl.download([url])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2379a858-109e-4d9c-942b-0bad85619768",
    "metadata": {},
